Name:                hs-cudd
Version:             0.0.0
Synopsis:            Haskell bindings to the CUDD decision diagram library

-- A longer description of the package.
-- Description:

-- The license under which the package is released.
License:             BSD3
License-file:        LICENSE

Author:              Bradford Larsen
Maintainer:          brad.larsen@gmail.com

Category:            Data
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

Cabal-version:       >=1.8


Library
  Exposed-modules:   Cudd.Raw
                     Cudd

  -- Packages needed in order to build this package.
  Build-depends:     base, transformers

  -- Modules not exported by this package.
  -- Other-modules:

  Extra-libraries:   cudd, mtr, util, st, epd

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools:       hsc2hs

  c-sources:         cbits/cudd_wrappers.c
  include-dirs:      cbits
  includes:          cudd_wrappers.h


Executable test-hs-cudd
  Main-is:           TestHsCudd.hs

  Build-depends:     base, transformers, hs-cudd, HUnit
