Name:                hs-cudd
Version:             0.0.0
Synopsis:            Haskell bindings to the CUDD decision diagram library

-- A longer description of the package.
-- Description:

-- The license under which the package is released.
License:             BSD3
License-file:        LICENSE

Author:              Bradford Larsen
Maintainer:          brad.larsen@gmail.com

Category:            Data
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

Cabal-version:       >=1.8


Library
  Hs-Source-Dirs:    src
  Exposed-modules:   Cudd.Raw
                     Cudd

  Build-depends:     base, transformers

  -- Modules not exported by this package.
  -- Other-modules:

  Extra-libraries:   cudd, mtr, util, st, epd

  Build-tools:       hsc2hs
  c-sources:         src/cbits/cudd_wrappers.c
  include-dirs:      src/cbits
  includes:          cudd_wrappers.h


Executable test-hs-cudd
  Hs-Source-Dirs:    test
  Main-is:           TestHsCudd.hs

  Build-depends:     base, transformers, hs-cudd, HUnit, QuickCheck, containers
