Name:                hs-cudd
Version:             0.0.0
Synopsis:            Haskell bindings to the CUDD decision diagram library

-- A longer description of the package.
-- Description:

-- The license under which the package is released.
License:             BSD3
License-file:        LICENSE

Author:              Bradford Larsen
Maintainer:          brad.larsen@gmail.com

Category:            Data
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

Cabal-version:       >=1.9.2


Library
  Hs-Source-Dirs:    src
  Exposed-modules:   Cudd
  -- Modules not exported by this package.
  Other-modules:     ForeignHandle
  Build-depends:     base, unix

  Build-tools:       hsc2hs
  cc-options:        -DHAVE_IEEE_754 -DSIZEOF_VOID_P=8 -DSIZEOF_LONG=8
                     -- -DDD_DEBUG
                     -- -DDD_CACHE_PROFILE
                     -- -DDD_UNIQUE_PROFILE
                     -- -DDD_COUNT          -- count number of recursive calls
                     -- -DDD_STATS          -- track & report some stats?
                     -- -Wall -ansi
  c-sources:         src/cbits/cudd_wrappers.c
                     cudd-2.5.0/cudd/cuddAddAbs.c
                     cudd-2.5.0/cudd/cuddAddApply.c
                     cudd-2.5.0/cudd/cuddAddFind.c
                     cudd-2.5.0/cudd/cuddAddInv.c
                     cudd-2.5.0/cudd/cuddAddIte.c
                     cudd-2.5.0/cudd/cuddAddNeg.c
                     cudd-2.5.0/cudd/cuddAddWalsh.c
                     cudd-2.5.0/cudd/cuddAndAbs.c
                     cudd-2.5.0/cudd/cuddAnneal.c
                     cudd-2.5.0/cudd/cuddApa.c
                     cudd-2.5.0/cudd/cuddAPI.c
                     cudd-2.5.0/cudd/cuddApprox.c
                     cudd-2.5.0/cudd/cuddBddAbs.c
                     cudd-2.5.0/cudd/cuddBddCorr.c
                     cudd-2.5.0/cudd/cuddBddIte.c
                     cudd-2.5.0/cudd/cuddBridge.c
                     cudd-2.5.0/cudd/cuddCache.c
                     cudd-2.5.0/cudd/cuddCheck.c
                     cudd-2.5.0/cudd/cuddClip.c
                     cudd-2.5.0/cudd/cuddCof.c
                     cudd-2.5.0/cudd/cuddCompose.c
                     cudd-2.5.0/cudd/cuddDecomp.c
                     cudd-2.5.0/cudd/cuddEssent.c
                     cudd-2.5.0/cudd/cuddExact.c
                     cudd-2.5.0/cudd/cuddExport.c
                     cudd-2.5.0/cudd/cuddGenCof.c
                     cudd-2.5.0/cudd/cuddGenetic.c
                     cudd-2.5.0/cudd/cuddGroup.c
                     cudd-2.5.0/cudd/cuddHarwell.c
                     cudd-2.5.0/cudd/cuddInit.c
                     cudd-2.5.0/cudd/cuddInteract.c
                     cudd-2.5.0/cudd/cuddLCache.c
                     cudd-2.5.0/cudd/cuddLevelQ.c
                     cudd-2.5.0/cudd/cuddLinear.c
                     cudd-2.5.0/cudd/cuddLiteral.c
                     cudd-2.5.0/cudd/cuddMatMult.c
                     cudd-2.5.0/cudd/cuddPriority.c
                     cudd-2.5.0/cudd/cuddRead.c
                     cudd-2.5.0/cudd/cuddRef.c
                     cudd-2.5.0/cudd/cuddReorder.c
                     cudd-2.5.0/cudd/cuddSat.c
                     cudd-2.5.0/cudd/cuddSign.c
                     cudd-2.5.0/cudd/cuddSolve.c
                     cudd-2.5.0/cudd/cuddSplit.c
                     cudd-2.5.0/cudd/cuddSubsetHB.c
                     cudd-2.5.0/cudd/cuddSubsetSP.c
                     cudd-2.5.0/cudd/cuddSymmetry.c
                     cudd-2.5.0/cudd/cuddTable.c
                     cudd-2.5.0/cudd/cuddUtil.c
                     cudd-2.5.0/cudd/cuddWindow.c
                     cudd-2.5.0/cudd/cuddZddCount.c
                     cudd-2.5.0/cudd/cuddZddFuncs.c
                     cudd-2.5.0/cudd/cuddZddGroup.c
                     cudd-2.5.0/cudd/cuddZddIsop.c
                     cudd-2.5.0/cudd/cuddZddLin.c
                     cudd-2.5.0/cudd/cuddZddMisc.c
                     cudd-2.5.0/cudd/cuddZddPort.c
                     cudd-2.5.0/cudd/cuddZddReord.c
                     cudd-2.5.0/cudd/cuddZddSetop.c
                     cudd-2.5.0/cudd/cuddZddSymm.c
                     cudd-2.5.0/cudd/cuddZddUtil.c
                     cudd-2.5.0/dddmp/dddmpBinary.c
                     cudd-2.5.0/dddmp/dddmpConvert.c
                     cudd-2.5.0/dddmp/dddmpDbg.c
                     cudd-2.5.0/dddmp/dddmpLoad.c
                     cudd-2.5.0/dddmp/dddmpLoadCnf.c
                     cudd-2.5.0/dddmp/dddmpNodeAdd.c
                     cudd-2.5.0/dddmp/dddmpNodeBdd.c
                     cudd-2.5.0/dddmp/dddmpNodeCnf.c
                     cudd-2.5.0/dddmp/dddmpStoreAdd.c
                     cudd-2.5.0/dddmp/dddmpStoreBdd.c
                     cudd-2.5.0/dddmp/dddmpStoreCnf.c
                     cudd-2.5.0/dddmp/dddmpStoreMisc.c
                     cudd-2.5.0/dddmp/dddmpUtil.c
                     cudd-2.5.0/epd/epd.c
                     cudd-2.5.0/mtr/mtrBasic.c
                     cudd-2.5.0/mtr/mtrGroup.c
                     cudd-2.5.0/st/st.c
                     cudd-2.5.0/util/cpu_stats.c
                     cudd-2.5.0/util/cpu_time.c
                     cudd-2.5.0/util/datalimit.c
                     cudd-2.5.0/util/pathsearch.c
                     cudd-2.5.0/util/pipefork.c
                     cudd-2.5.0/util/prtime.c
                     cudd-2.5.0/util/ptime.c
                     cudd-2.5.0/util/restart.c
                     cudd-2.5.0/util/safe_mem.c
                     cudd-2.5.0/util/saveimage.c
                     cudd-2.5.0/util/state.c
                     cudd-2.5.0/util/strsav.c
                     cudd-2.5.0/util/stub.c
                     cudd-2.5.0/util/texpand.c

  include-dirs:      src/cbits
                     cudd-2.5.0/cudd
                     cudd-2.5.0/dddmp
                     cudd-2.5.0/epd
                     cudd-2.5.0/mtr
                     cudd-2.5.0/st
                     cudd-2.5.0/util
  includes:          cudd_wrappers.h


Test-Suite unit-tests
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    test
  Main-is:           UnitTests.hs
  Other-Modules:     Prop
  Build-depends:     base, hs-cudd, HUnit, QuickCheck, containers

Test-Suite property-tests
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    test
  Main-is:           PropertyTests.hs
  Other-Modules:     Prop
                     PropToBdd
                     PropGenerators
  Build-depends:     base, hs-cudd, QuickCheck, containers

Test-Suite test-nqueens
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    test
  Main-is:           NQueens.hs
  Other-Modules:     Prop
                     PropToBdd
  Build-depends:     base, hs-cudd, QuickCheck, containers
